Mobile overflow-X bug solved

--- a/src/css/contato.css
+++ b/src/css/contato.css
@@ -50,7 +50,7 @@
     gap: 40px;
     margin-block: 40px 80px;
 }
-.informacoesLeft {
+.informacoesLeft {display: none;
     width: 50%;
     text-align: end;
     display: flex;
@@ -74,6 +74,7 @@
     background: black;
 }
 .informacoesRight {
+    display: none;
     width: 50%;
     display: flex;
     flex-direction: column;
@@ -100,9 +101,6 @@
 }
 .aberto {
     color: var(--color-primary-6);
-}
-.fechado {
-    color: var(--darkRed);
 }
 .fa-paper-plane {
     border: 2px solid var(--color-primary-8);
