--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -53,7 +53,7 @@ border: 3px solid #ffffff;
 
 html {
     scroll-behavior: smooth;
-    overflow-x: hidden;
+    /* overflow-x: hidden; */
     position: sticky;
     left: 0;
 }
@@ -107,3 +107,11 @@ section {
 .color-p5 {
     color: var(--color-primary-5) !important;
 }
+
+/* .scrolled {
+    left: 0 !important;
+}
+
+.d-flex {
+    display: flex !important;
+} */
